tests/security/foreachArg/output.txt
ERROR: TaintedData - input.hack:4:10 - Detected tainted HTML tags